<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.sf.sgs</groupId>
		<artifactId>sgs-framework-boot-parent</artifactId>
		<version>1.5</version>
	</parent>
	
	<version>1.0-SNAPSHOT</version>
	
	<groupId>org.example</groupId>
	<artifactId>testDubbo</artifactId>
	<packaging>pom</packaging>

	<name>testDubbo</name>
	<url>http://10.118.46.12:8080/site/testDubbo/</url>

	<properties>
		<!-- Build args -->
		<!--<argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline> -->
		<java.version>1.7</java.version>
		<file_encoding>UTF-8</file_encoding>
		<project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>
		<project.reporting.outputEncoding>${file_encoding}</project.reporting.outputEncoding>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.test.skip>false</maven.test.skip>
		<skip_maven_deploy>false</skip_maven_deploy>
		
		<!-- 基础包版本号 -->
		<sgs-framework-boot-cache.version>1.0.0</sgs-framework-boot-cache.version>
		<sgs-locale.version>1.0.0</sgs-locale.version>
		
		<!-- url -->
		<issue.jira.url>http://10.0.137.95:8088/secure/Dashboard.jspa</issue.jira.url>
		<ci.url>http://10.118.46.12:8080/jenkins/job/${project.artifactId}</ci.url>
		<scm.source.url>http://10.0.137.95:7990/projects/CO-NIR/repos/</scm.source.url>
		<scm.source.connection>scm:git:http://10.0.137.95:7990/projects/CO-NIR/</scm.source.connection>
		<site.deploy.url>file:/usr/local/apache-tomcat-7.0.54/webapps/site/${project.artifactId}</site.deploy.url>
		<!--log4j2升级-->
		<slf4j.version>1.7.25</slf4j.version>
		<log4j2.version>2.13.3</log4j2.version>
	</properties>

	<dependencies>
		<!-- log start -->
	<!--	<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
		</dependency>-->
		<!-- log end -->

		<!-- for test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.2.3</version>
				<scope>provided</scope>
			</dependency>


			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jul-to-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>log4j-over-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>${log4j2.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>${log4j2.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sf.sgs</groupId>
				<artifactId>sflog-log4j</artifactId>
				<version>2.0.3</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<repositories>
		<repository>
			<id>sf-private-reponsitory</id>
			<name>SF private repository</name>
			<url>http://nexus.sf-express.com//nexus/content/groups/public/</url>
		</repository>
	</repositories>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<!-- Deploy plugin configuration -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<configuration>
					<skip>${skip_maven_deploy}</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<encoding>${file_encoding}</encoding>
				</configuration>
			</plugin>
		</plugins>

	</build>

<modules>  <module>testDubbo-client</module>
    <module>testDubbo-common</module>
    <module>testDubbo-dao</module>
    <module>testDubbo-manager</module>
    <module>testDubbo-service</module>
    <module>testDubbo-test</module>
  </modules>
</project>
